# bdsp_ug_generator

./: .gitignore  Cargo.toml  LICENSE.md  StatueEffectRawData.json  TamagoWazaTable.json  UgEncount_02.json  UgEncount_03.json  UgEncount_04.json  UgEncount_05.json  UgEncount_06.json  UgEncount_07.json  UgEncount_08.json  UgEncount_09.json  UgEncount_10.json  UgEncount_11.json  UgEncount_12.json  UgEncount_20.json  UgPokemonData.json  UgRandMark.json  UgSpecialPokemon.json  UgTamagoWazaIgnoreTable.json
.github/workflows/: rust.yml
src/: filter.rs  lib.rs  main.rs  personal_info_bdsp.rs  personal_table.rs  run_print.rs  run_results.rs  statues.rs  xorshift.rs
