[package]
name = "bdsp_ug_generator"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ['derive']}
serde_json = "1.0.81"
lazy_static = "1.4.0"
clap = { version = "3.1.18", features = ['derive']}